# ADAPR5

./: Readme.md  enviroment.yml
ada_project_ml_i/: .travis.yml  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
ada_project_ml_i/.github/: ISSUE_TEMPLATE.md
ada_project_ml_i/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
ada_project_ml_i/notebooks/: AdaPr5.ipynb  ml_classificacao_projeto_5.ipynb  valores_unicos_causa_acidente.txt
ada_project_ml_i/src/ada_project_ml_i/: __init__.py
ada_project_ml_i/tests/: __init__.py  test_ada_project_ml_i.py
