[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ada_project_ml_i"
version = "0.1.0"
description = "Projeto de Machine Learning- Ada/Santander-Coders"
readme = "README.rst"
authors = [
  {name = "Chen Yen Pin", email = "chenyenpin1982@gmail.com"}
]
maintainers = [
  {name = "Chen Yen Pin", email = "chenyenpin1982@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/ChenYP-1982/ada_project_ml_i/issues"
changelog = "https://github.com/ChenYP-1982/ada_project_ml_i/blob/master/changelog.md"
homepage = "https://github.com/ChenYP-1982/ada_project_ml_i"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

